--- a/combat/edit/package.json
+++ b/combat/edit/package.json
@@ -50,6 +50,7 @@
     "@electron-forge/maker-rpm": "6.0.0-beta.39",
     "@electron-forge/maker-squirrel": "6.0.0-beta.39",
     "@electron-forge/maker-zip": "6.0.0-beta.39",
-    "electron": "4.0.3"
+    "electron": "4.0.3",
+	"electron-prebuilt-compile": "^4.0.0",
   }
 }
